@@ -25,6 +25,7 @@ pipeline {
                         sh 'echo $sonar_scanner'
                         sh """
                         ${env.sonar_scanner} \\
+                        JDK_JAVA_OPTIONS = '--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED' \\
                         -Dsonar.projectKey=totallyspies \\
                         -Dsonar.projectName=totallyspies \\
                         -Dsonar.projectVersion=1.0 \\
